--- a/nfcip-midlet/build.xml
+++ b/nfcip-midlet/build.xml
@@ -5,7 +5,7 @@
 	<property name="version" value="1.1.2" />
 	<property name="midlet.vendor" value="Radboud University Nijmegen" />
 	<property name="midlet.name" value="NFCIPTestMIDlet" />
-	<property name="midlet.class" value="NFCIPTestMIDlet" />
+	<property name="midlet.class" value="ds.nfcipme.tests.NFCIPTestMIDlet" />
 	<property name="source" value="1.3" />
 	<property name="target" value="1.1" />
 
@@ -28,6 +28,7 @@
 
 	<!-- these are the jars that actually need to be added to the MIDlet -->
 	<path id="injars.classpath">
+		<pathelement location="${dist}/nfcip-javame-${version}.jar" />
 		<pathelement location="${dist}/${ant.project.name}-${version}.jar" />
 	</path>
 
@@ -50,14 +51,17 @@
 	<!-- compile -->
 	<target name="compile" depends="init" description="Compile the source">
 		<mkdir dir="${build}" />
-		<javac source="${source}" target="${target}" srcdir="${src}" destdir="${build}" excludes="ds/contactless/tests/**,ds/contactless/NFCIPConnection.java" classpathref="all.classpath" />
+		<javac source="${source}" target="${target}" srcdir="${src}" destdir="${build}" classpathref="all.classpath" />
 	</target>
 
 	<!-- dist -->
 	<target name="dist" depends="compile" description="Create the distribution">
 		<mkdir dir="${dist}" />
-		<!-- create the JAR file -->
-		<jar jarfile="${dist}/${ant.project.name}-${version}.jar" basedir="${build}">
+		<!-- create the library JAR file -->
+		<zip zipfile="${dist}/nfcip-javame-${version}.jar" basedir="${build}" excludes="ds/nfcipme/tests/**" />
+		
+		<!-- create the MIDlet JAR file -->
+		<jar jarfile="${dist}/${ant.project.name}-${version}.jar" basedir="${build}" includes="ds/nfcipme/tests/**">
 			<manifest>
 				<attribute name="MIDlet-Version" value="${version}" />
 				<attribute name="MIDlet-Vendor" value="${midlet.vendor}" />
@@ -73,7 +77,7 @@
 	<!-- preverify -->
 	<target name="preverify" depends="dist" description="Preverify the code for Java ME">
 		<!-- use ProGuard to preverify the Java Classes for Java ME -->
-		<proguard microedition="true" obfuscate="false" optimize="false" shrink="false">
+		<proguard microedition="true" obfuscate="true" optimize="false" shrink="true">
 			<injar refid="injars.classpath" />
 			<libraryjar refid="compile.classpath" />
 			<outjar path="${dist}/${ant.project.name}-${version}-preverified.jar" />
