--- a/trunk/nfcip-java/build.xml
+++ b/trunk/nfcip-java/build.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0"?>
 <project name="nfcip-java" default="compile" basedir=".">
 	<description>Java library for NFCIP communication</description>
-	<property name="version" value="1.0.2" />
+	<property name="version" value="1.0.3" />
 
 	<!-- set global properties for this build -->
 	<property name="src" location="src" />
 	<property name="build" location="build" />
 	<property name="dist" location="dist" />
+	<property name="doc" location="javadoc" />
 
 	<!-- init -->
 	<target name="init">
@@ -27,9 +28,16 @@
 		<jar jarfile="${dist}/${ant.project.name}-${version}.jar" basedir="${build}" />
 	</target>
 
+	<!-- doc -->
+	<target name="doc">
+		<mkdir dir="${doc}" />
+		<javadoc sourcepath="${src}" destdir="${doc}" />
+	</target>
+		
 	<!-- clean -->
 	<target name="clean" description="clean up">
 		<delete dir="${build}" />
 		<delete dir="${dist}" />
+		<delete dir="${doc}" />
 	</target>
 </project>
