--- a/trunk/nfcip-midlet/lib/lib.properties
+++ b/trunk/nfcip-midlet/lib/lib.properties
@@ -1,4 +1,6 @@
-jsr-257-nokia.jar=${lib.dir}/jsr-257-nokia-1.0.jar
+jsr-257-nokia.jar=${lib.dir}/jsr-257-nokia.jar
 midp.jar=${lib.dir}/microemulator/lib/midpapi20.jar
 cldc.jar=${lib.dir}/microemulator/lib/cldcapi11.jar
 jsr-75.jar=${lib.dir}/microemulator/lib/microemu-jsr-75.jar
+proguard.jar=${lib.dir}/proguard/lib/proguard.jar
+jad-ant-tasks.jar=${lib.dir}/jad-ant-tasks.jar
