- now also send/receive the upper bound (maxDataLength) bytes 	- more pblic methods to obtain information about the data transfer 	  like number of bytes, number of low level sends 	- return data is always an empty array, never null 	- fix getNumberOfResets to actually work as planned 	- move the for loop inside the try/catch block to deal better 	  with errors (like not continueing noOfRuns times when there is 	  a failure)

--- a/nfcip-java/build.xml
+++ b/nfcip-java/build.xml
@@ -23,9 +23,12 @@
 	</target>
 
 	<!-- dist -->
-	<target name="dist" depends="compile" description="generate the distribution">
+	<target name="dist"
+	        depends="compile"
+	        description="generate the distribution">
 		<mkdir dir="${dist}" />
-		<jar jarfile="${dist}/${ant.project.name}-${version}.jar" basedir="${build}" />
+		<jar jarfile="${dist}/${ant.project.name}-${version}.jar"
+		     basedir="${build}" />
 	</target>
 
 	<!-- doc -->
@@ -33,7 +36,7 @@
 		<mkdir dir="${doc}" />
 		<javadoc sourcepath="${src}" destdir="${doc}" />
 	</target>
-		
+
 	<!-- clean -->
 	<target name="clean" description="clean up">
 		<delete dir="${build}" />
