--- a/trunk/nfcip-midlet/build.xml
+++ b/trunk/nfcip-midlet/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <project name="nfcip-midlet" default="compile" basedir=".">
-	<description>NFCIP MIDlet</description>
+	<description>NFCIP Java ME MIDlet Test Suite</description>
 
 	<property name="version" value="1.1.3" />
 	<property name="midlet.vendor" value="Radboud University Nijmegen" />
@@ -16,11 +16,16 @@
 	<property name="doc" location="javadoc" />
 	<property name="deployed" location="deployed" />
 	<property name="lib.dir" location="lib" />
+
+	<!-- this file contains the locations of the required libraries -->
 	<property file="${lib.dir}/lib.properties" />
+
+	<!-- this file contains properties required for signing the MIDlet 
+	     Suite -->
 	<property file="sign.properties" />
 
-	<!-- these are the jars that are just needs for compilation as the 
-		 phone has implementations of those -->
+	<!-- these are the libraries that are just needed for compilation as the 
+	     phone has implementations of those -->
 	<path id="compile.classpath">
 		<pathelement location="${cldc.jar}" />
 		<pathelement location="${midp.jar}" />
@@ -28,20 +33,22 @@
 		<pathelement location="${jsr-257-nokia.jar}" />
 	</path>
 
-	<!-- these are the jars that actually need to be added to the MIDlet -->
+	<!-- these are the libraries that actually need to be added to the MIDlet 
+	     Suite -->
 	<path id="injars.classpath">
 		<pathelement location="${dist}/nfcip-javame-${version}.jar" />
 		<pathelement location="${dist}/${ant.project.name}-${version}.jar" />
 	</path>
 
-	<!-- this is used for compiling, we need everything there -->
+	<!-- this is used for compiling, we need all libraries here -->
 	<path id="all.classpath">
 		<path refid="injars.classpath" />
 		<path refid="compile.classpath" />
 	</path>
 
 	<!-- external Ant tasks -->
-	<taskdef resource="proguard/ant/task.properties" classpath="${proguard.jar}" />
+	<taskdef resource="proguard/ant/task.properties"
+	         classpath="${proguard.jar}" />
 	<taskdef resource="task.properties" classpath="${jad-ant-tasks.jar}" />
 
 	<!-- init -->
@@ -53,59 +60,92 @@
 	<!-- compile -->
 	<target name="compile" depends="init" description="Compile the source">
 		<mkdir dir="${build}" />
-		<javac source="${source}" target="${target}" srcdir="${src}" destdir="${build}" classpathref="all.classpath" />
+		<javac source="${source}"
+		       target="${target}"
+		       srcdir="${src}"
+		       destdir="${build}"
+		       classpathref="all.classpath" />
 	</target>
 
 	<!-- dist -->
 	<target name="dist" depends="compile" description="Create the distribution">
 		<mkdir dir="${dist}" />
-		<!-- create the library JAR file -->
-		<zip zipfile="${dist}/nfcip-javame-${version}.jar" basedir="${build}" excludes="ds/nfcipme/tests/**" />
+		<!-- create the Java ME library JAR file -->
+		<zip zipfile="${dist}/nfcip-javame-${version}.jar"
+		     basedir="${build}"
+		     excludes="ds/nfcipme/tests/**" />
 
-		<!-- create the MIDlet JAR file -->
-		<jar jarfile="${dist}/${ant.project.name}-${version}.jar" basedir="${build}" includes="ds/nfcipme/tests/**">
+		<!-- create the MIDlet Suite JAR file -->
+		<jar jarfile="${dist}/${ant.project.name}-${version}.jar"
+		     basedir="${build}"
+		     includes="ds/nfcipme/tests/**">
 			<manifest>
 				<attribute name="Built-By" value="${user.name}" />
 				<attribute name="MIDlet-Version" value="${version}" />
 				<attribute name="MIDlet-Vendor" value="${midlet.vendor}" />
 				<attribute name="MicroEdition-Configuration" value="CLDC-1.1" />
 				<attribute name="MicroEdition-Profile" value="MIDP-2.0" />
-				<attribute name="MIDlet-1" value="${midlet.name},,${midlet.class}" />
-				<attribute name="MIDlet-Name" value="${midlet.name} MIDlet Suite" />
-				<attribute name="MIDlet-Permissions" value="javax.microedition.io.Connector.file.read, javax.microedition.io.Connector.file.write" />
+				<attribute name="MIDlet-1"
+				           value="${midlet.name},,${midlet.class}" />
+				<attribute name="MIDlet-Name"
+				           value="${midlet.name} MIDlet Suite" />
+				<attribute name="MIDlet-Permissions"
+				           value="javax.microedition.io.Connector.file.read, javax.microedition.io.Connector.file.write" />
 			</manifest>
 		</jar>
 	</target>
 
 	<!-- preverify -->
-	<target name="preverify" depends="dist" description="Preverify the code for Java ME">
+	<target name="preverify"
+	        depends="dist"
+	        description="Preverify the code for Java ME">
 		<!-- use ProGuard to preverify the Java Classes for Java ME -->
-		<proguard microedition="true" obfuscate="true" optimize="false" shrink="true">
+		<proguard microedition="true"
+		          obfuscate="true"
+		          optimize="false"
+		          shrink="true">
 			<injar refid="injars.classpath" />
 			<libraryjar refid="compile.classpath" />
 			<outjar path="${dist}/${ant.project.name}-${version}-preverified.jar" />
-			<keep access="public" type="class" name="*" extends="javax.microedition.midlet.MIDlet" />
+			<keep access="public"
+			      type="class"
+			      name="*"
+			      extends="javax.microedition.midlet.MIDlet" />
 		</proguard>
 	</target>
 
 	<!-- deploy -->
-	<target name="deploy" depends="preverify" description="Deploy the distribution">
+	<target name="deploy"
+	        depends="preverify"
+	        description="Deploy the distribution">
 		<mkdir dir="${deployed}" />
+
 		<!-- copy the JAR file to deploy directory -->
-		<copy file="${dist}/${ant.project.name}-${version}-preverified.jar" tofile="${deployed}/${ant.project.name}-${version}.jar" />
+		<copy file="${dist}/${ant.project.name}-${version}-preverified.jar"
+		      tofile="${deployed}/${ant.project.name}-${version}.jar" />
+
 		<!-- create the JAD file -->
-		<jad jadfile="${deployed}/${ant.project.name}-${version}.jad" jarfile="${deployed}/${ant.project.name}-${version}.jar" />
+		<jad jadfile="${deployed}/${ant.project.name}-${version}.jad"
+		     jarfile="${deployed}/${ant.project.name}-${version}.jar" />
 	</target>
 
 	<!-- sign -->
 	<target name="sign" depends="deploy" description="Sign the MIDlet Suite">
-		<sign keystore="${keystore}" storepass="${storepass}" certpass="${certpass}" certalias="${certalias}" jarfile="${deployed}/${ant.project.name}-${version}.jar" jadfile="${deployed}/${ant.project.name}-${version}.jad" />
+		<sign keystore="${keystore}"
+		      storepass="${storepass}"
+		      certpass="${certpass}"
+		      certalias="${certalias}"
+		      jarfile="${deployed}/${ant.project.name}-${version}.jar"
+		      jadfile="${deployed}/${ant.project.name}-${version}.jad" />
 	</target>
 
 	<!-- doc -->
 	<target name="doc">
 		<mkdir dir="${doc}" />
-		<javadoc sourcepath="${src}" excludepackagenames="ds.nfcipme.tests.*" destdir="${doc}" classpathref="all.classpath" />
+		<javadoc sourcepath="${src}"
+		         excludepackagenames="ds.nfcipme.tests.*"
+		         destdir="${doc}"
+		         classpathref="all.classpath" />
 	</target>
 
 	<!-- clean -->
