- remove all the test code from the MIDlet and use the one from the 	  library instead as to have the same code base as the Java SE application 	- export the option to set fake initiator/fake target from MIDlet UI 	- set fake target as default

--- a/nfcip-midlet/lib/lib.properties
+++ b/nfcip-midlet/lib/lib.properties
@@ -4,3 +4,4 @@ cldc.jar=${lib.dir}/microemulator/lib/cldcapi11.jar
 jsr-75.jar=${lib.dir}/microemulator/lib/microemu-jsr-75.jar
 proguard.jar=${lib.dir}/proguard/lib/proguard.jar
 jad-ant-tasks.jar=${lib.dir}/jad-ant-tasks.jar
+nfcip-javame.jar=/home/fkooman/workspace/nfcip-java/dist/nfcip-javame-1.2.0.jar
