--- a/trunk/nfcip-midlet/build.xml
+++ b/trunk/nfcip-midlet/build.xml
@@ -2,7 +2,7 @@
 <project name="nfcip-midlet" default="compile" basedir=".">
 	<description>NFCIP Java ME MIDlet Test Suite</description>
 
-	<property name="version" value="1.1.3" />
+	<property name="version" value="1.2.0" />
 	<property name="midlet.vendor" value="Radboud University Nijmegen" />
 	<property name="midlet.name" value="NFCIPTestMIDlet" />
 	<property name="midlet.class" value="ds.nfcipme.tests.NFCIPTestMIDlet" />
@@ -36,7 +36,7 @@
 	<!-- these are the libraries that actually need to be added to the MIDlet 
 	     Suite -->
 	<path id="injars.classpath">
-		<pathelement location="${dist}/nfcip-javame-${version}.jar" />
+		<pathelement location="${nfcip-javame.jar}" />
 		<pathelement location="${dist}/${ant.project.name}-${version}.jar" />
 	</path>
 
@@ -70,11 +70,6 @@
 	<!-- dist -->
 	<target name="dist" depends="compile" description="Create the distribution">
 		<mkdir dir="${dist}" />
-		<!-- create the Java ME library JAR file -->
-		<zip zipfile="${dist}/nfcip-javame-${version}.jar"
-		     basedir="${build}"
-		     excludes="ds/nfcipme/tests/**" />
-
 		<!-- create the MIDlet Suite JAR file -->
 		<jar jarfile="${dist}/${ant.project.name}-${version}.jar"
 		     basedir="${build}"
