- create methods to ask whether or not the mode is "initiator" or "target" 	  sees fake initiator also as initiator and fake target as target 	- updated Javadoc, move as much as possible to the NFCIPInterface 	- update the README file to reflect the new situation 	- add licensing information in every source file 	- remove linked javadoc from abstract class 	- better naming: messages are now API calls to send/receive and blocks are 	  the low level blocks that are sent between initiator and target 	- make the debugLevel for the NFCIPTest class configurable through the 	  constructor 	- *TODO* create ds.nfcip.se and ds.nfcip.me packages with respective 	  NFCIPConnection in there... 	- *TODO* cleanup README, mention MIDlet 	- *TODO* new project for NFCIPTestMain and UtilTest?!?

--- a/nfcip-java/build.xml
+++ b/nfcip-java/build.xml
@@ -56,9 +56,10 @@
 		<mkdir dir="${doc}" />
 		<javadoc sourcepath="${src}"
 		         access="public"
-		         excludepackagenames="ds.nfcipme.tests.*"
+		         excludepackagenames="ds.nfcip.tests.*, ds.nfcipme.tests.*"
 		         destdir="${doc}"
-		         classpathref="compile.classpath" />
+		         classpathref="compile.classpath"
+		         failonerror="true" />
 	</target>
 
 	<!-- clean -->
