- block size is implementation specific, so put it in the NFCIPConnection 	  classes and not in the abstract class. We default it to 100 bytes, which 	  is overridden by the NFCIPConnection for SE and ME to 240 bytes. 	- change the name of the JAR files to nfcip-java-se-VERSION.jar and 	  nfcip-java-me-VERSION.jar 	- move all tests to nfcip-java-tests project to make this just contain the       library    	- *TODO* cleanup README 	- *TODO* mention test project 	- *TODO* more extensive info on "fake" modes (like that antenna is really 	  weak in mobile phone when in initiator mode)

--- a/nfcip-java/build.xml
+++ b/nfcip-java/build.xml
@@ -31,12 +31,12 @@
 
 	<!-- compile -->
 	<target name="compile" depends="init" description="compile the source">
-		<javac srcdir="${src}" destdir="${build}" includes="ds/nfcip/**" />
+		<javac srcdir="${src}" destdir="${build}" includes="ds/nfcip/se/**" />
 		<javac srcdir="${src}"
 		       source="1.3"
 		       target="1.1"
 		       destdir="${buildme}"
-		       includes="ds/nfcipme/**, ds/nfcip/NFCIPTest*"
+		       includes="ds/nfcip/me/**"
 		       classpathref="compile.classpath" />
 	</target>
 
@@ -45,9 +45,9 @@
 	        depends="compile"
 	        description="generate the distribution">
 		<mkdir dir="${dist}" />
-		<jar jarfile="${dist}/${ant.project.name}-${version}.jar"
+		<jar jarfile="${dist}/${ant.project.name}-se-${version}.jar"
 		     basedir="${build}" />
-		<zip zipfile="${dist}/${ant.project.name}me-${version}.jar"
+		<zip zipfile="${dist}/${ant.project.name}-me-${version}.jar"
 		     basedir="${buildme}" />
 	</target>
 
